--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ui",
-  "version": "0.0.0",
+  "name": "hire-helper",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config ./proxy.conf.json",
-    "build": "ng build --configuration production",
+    "build": "ng build --configuration production --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
